first working version

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dialect Dash</title>
+    <title>Accentiquial</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
     <main class="app">
       <section id="startScreen" class="screen">
         <div class="start-card">
-          <div class="title">Dialect Dash</div>
+          <div class="title">Accentiquial</div>
           <div class="high-score">High score: <span id="highScore">0</span></div>
 
           <div class="group">
